feat: add handler for admin
